@@ -9,7 +9,7 @@
  * redistribution of this file, and for a DISCLAIMER OF ALL
  * WARRANTIES.
  * 
- * RCS: @(#) $Id: Notifier.java,v 1.2 1999/05/09 00:46:11 dejong Exp $
+ * RCS: @(#) $Id: Notifier.java,v 1.3 2000/05/13 10:17:11 mo Exp $
  *
  */
 
@@ -18,96 +18,72 @@ package tcl.lang;
 import java.util.Hashtable;
 import java.util.Vector;
 
-/*
- * Implements the Jacl version of the Notifier class. The Notifier is
- * the lowest-level part of the event system. It is used by
- * higher-level event sources such as file, JavaBean and timer
- * events. The Notifier manages an event queue that holds TclEvent
- * objects.
- *
- * The Jacl notifier is designed to run in a multi-threaded
- * environment. Each notifier instance is associated with a primary
- * thread. Any thread can queue (or dequeue) events using the
- * queueEvent (or deleteEvents) call. However, only the primary thread
- * may process events in the queue using the doOneEvent()
- * call. Attepmts to call doOneEvent from a non-primary thread will
- * cause a TclRuntimeError.
- *
- * This class does not have a public constructor and thus cannot be
- * instantiated. The only way to for a Tcl extension to get an
- * Notifier is to call Interp.getNotifier() (or
- * Notifier.getNotifierForThread), which returns the Notifier for that
- * interpreter (thread).
- */
+// Implements the Jacl version of the Notifier class. The Notifier is
+// the lowest-level part of the event system. It is used by
+// higher-level event sources such as file, JavaBean and timer
+// events. The Notifier manages an event queue that holds TclEvent
+// objects.
+//
+// The Jacl notifier is designed to run in a multi-threaded
+// environment. Each notifier instance is associated with a primary
+// thread. Any thread can queue (or dequeue) events using the
+// queueEvent (or deleteEvents) call. However, only the primary thread
+// may process events in the queue using the doOneEvent()
+// call. Attepmts to call doOneEvent from a non-primary thread will
+// cause a TclRuntimeError.
+//
+// This class does not have a public constructor and thus cannot be
+// instantiated. The only way to for a Tcl extension to get an
+// Notifier is to call Interp.getNotifier() (or
+// Notifier.getNotifierForThread), which returns the Notifier for that
+// interpreter (thread).
 
 public class Notifier {
 
-/*
- * First pending event, or null if none.
- */
+// First pending event, or null if none.
 
 private TclEvent firstEvent;
 
-/*
- * Last pending event, or null if none.
- */
+// Last pending event, or null if none.
 
 private TclEvent lastEvent;
 
-/*
- * Last high-priority event in queue, or null if none.
- */
+// Last high-priority event in queue, or null if none.
 
 private TclEvent markerEvent;
 
-/*
- * The primary thread of this notifier. Only this thread should process
- * events from the event queue.
- */
+// The primary thread of this notifier. Only this thread should process
+// events from the event queue.
 
 Thread primaryThread;
 
-/*
- * Stores the Notifier for each thread.
- */
+// Stores the Notifier for each thread.
 
 private static Hashtable notifierTable = new Hashtable();
 
-/*
- * List of registered timer handlers.
- */
+// List of registered timer handlers.
 
 Vector timerList;
 
-/*
- * Used to distinguish older timer handlers from recently-created ones.
- */
+// Used to distinguish older timer handlers from recently-created ones.
 
 int timerGeneration;
 
-/*
- * True if there is a pending timer event in the event queue, false
- * otherwise.
- */
+// True if there is a pending timer event in the event queue, false
+// otherwise.
 
 boolean timerPending;
 
-/*
- * List of registered idle handlers.
- */
+// List of registered idle handlers.
 
 Vector idleList;
 
-/*
- * Used to distinguish older idle handlers from recently-created ones.
- */
+// Used to distinguish older idle handlers from recently-created ones.
 
 int idleGeneration;
 
-/*
- * Reference count of the notifier. It's used to tell when a notifier
- * is no longer needed.
- */
+// Reference count of the notifier. It's used to tell when a notifier
+// is no longer needed.
 
 int refCount;
 
@@ -266,9 +242,7 @@ queueEvent(
     evt.notifier = this;
 
     if (position == TCL.QUEUE_TAIL) {
-	/*
-	 * Append the event on the end of the queue.
-	 */
+	// Append the event on the end of the queue.
 
 	evt.next = null;
 
@@ -279,9 +253,7 @@ queueEvent(
 	}
 	lastEvent = evt;
     } else if (position == TCL.QUEUE_HEAD) {
-	/*
-	 * Push the event on the head of the queue.
-	 */
+	// Push the event on the head of the queue.
 
 	evt.next = firstEvent;
 	if (firstEvent == null) {
@@ -289,10 +261,8 @@ queueEvent(
 	}
 	firstEvent = evt;
     } else if (position == TCL.QUEUE_MARK) {
-	/*
-	 * Insert the event after the current marker event and advance
-	 * the marker to the new event.
-	 */
+	// Insert the event after the current marker event and advance
+	// the marker to the new event.
 
 	if (markerEvent == null) {
 	    evt.next = firstEvent;
@@ -306,9 +276,7 @@ queueEvent(
 	    lastEvent = evt;
 	}
     } else {
-	/*
-	 * Wrong flag.
-	 */
+	// Wrong flag.
 
 	throw new TclRuntimeError("wrong position \"" + position +
 	       "\", must be TCL.QUEUE_HEAD, TCL.QUEUE_TAIL or TCL.QUEUE_MARK");
@@ -393,35 +361,29 @@ serviceEvent(
 {
     TclEvent evt, prev;
 
-    /*
-     * No event flags is equivalent to TCL_ALL_EVENTS.
-     */
+    // No event flags is equivalent to TCL_ALL_EVENTS.
     
     if ((flags & TCL.ALL_EVENTS) == 0) {
 	flags |= TCL.ALL_EVENTS;
     }
 
-    /*
-     * Loop through all the events in the queue until we find one
-     * that can actually be handled.
-     */
+    // Loop through all the events in the queue until we find one
+    // that can actually be handled.
 
     for (evt = firstEvent; evt != null; evt = evt.next) {
-	/*
-	 * Call the handler for the event.  If it actually handles the
-	 * event then free the storage for the event.  There are two
-	 * tricky things here, both stemming from the fact that the event
-	 * code may be re-entered while servicing the event:
-	 *
-	 * 1. Set the "isProcessing" field to true. This is a signal to
-	 *    ourselves that we shouldn't reexecute the handler if the
-	 *    event loop is re-entered.
-	 * 2. When freeing the event, must search the queue again from the
-	 *    front to find it.  This is because the event queue could
-	 *    change almost arbitrarily while handling the event, so we
-	 *    can't depend on pointers found now still being valid when
-	 *    the handler returns.
-	 */
+	// Call the handler for the event.  If it actually handles the
+	// event then free the storage for the event.  There are two
+	// tricky things here, both stemming from the fact that the event
+	// code may be re-entered while servicing the event:
+	//
+	// 1. Set the "isProcessing" field to true. This is a signal to
+	//    ourselves that we shouldn't reexecute the handler if the
+	//    event loop is re-entered.
+	// 2. When freeing the event, must search the queue again from the
+	//    front to find it.  This is because the event queue could
+	//    change almost arbitrarily while handling the event, so we
+	//    can't depend on pointers found now still being valid when
+	//    the handler returns.
 
 	boolean b = evt.isProcessing;
 	evt.isProcessing = true;
@@ -443,7 +405,7 @@ serviceEvent(
 		}
 	    } else {
 		for (prev = firstEvent; prev.next != evt; prev = prev.next) {
-		    /* Empty loop body. */
+		    // Empty loop body.
 		}
 		prev.next = evt.next;
 		if (evt.next == null) {
@@ -455,19 +417,15 @@ serviceEvent(
 	    }
 	    return 1;
 	} else {
-	    /*
-	     * The event wasn't actually handled, so we have to
-	     * restore the isProcessing field to allow the event to be
-	     * attempted again.
-	     */
+	    // The event wasn't actually handled, so we have to
+	    // restore the isProcessing field to allow the event to be
+	    // attempted again.
 
 	    evt.isProcessing = b;
 	}
 
-	/*
-	 * The handler for this event asked to defer it.  Just go on to
-	 * the next event.
-	 */
+	// The handler for this event asked to defer it.  Just go on to
+	// the next event.
 
 	continue;
     }
@@ -510,26 +468,20 @@ doOneEvent(
 {
     int result = 0;
 
-    /*
-     * No event flags is equivalent to TCL_ALL_EVENTS.
-     */
+    // No event flags is equivalent to TCL_ALL_EVENTS.
     
     if ((flags & TCL.ALL_EVENTS) == 0) {
 	flags |= TCL.ALL_EVENTS;
     }
 
-    /*
-     * The core of this procedure is an infinite loop, even though
-     * we only service one event.  The reason for this is that we
-     * may be processing events that don't do anything inside of Tcl.
-     */
+    // The core of this procedure is an infinite loop, even though
+    // we only service one event.  The reason for this is that we
+    // may be processing events that don't do anything inside of Tcl.
 
     while (true) {
-	/*
-	 * If idle events are the only things to service, skip the
-	 * main part of the loop and go directly to handle idle
-	 * events (i.e. don't wait even if TCL_DONT_WAIT isn't set).
-	 */
+	// If idle events are the only things to service, skip the
+	// main part of the loop and go directly to handle idle
+	// events (i.e. don't wait even if TCL_DONT_WAIT isn't set).
 	    
 	if ((flags & TCL.ALL_EVENTS) == TCL.IDLE_EVENTS) {
 	    return serviceIdle();
@@ -537,11 +489,9 @@ doOneEvent(
 
 	long sysTime = System.currentTimeMillis();
 
-	/*
-	 * If some timers have been expired, queue them into the
-	 * event queue. We can't process expired times right away,
-	 * because there may already be other events on the queue.
-	 */
+	// If some timers have been expired, queue them into the
+	// event queue. We can't process expired times right away,
+	// because there may already be other events on the queue.
 
 	if (!timerPending && (timerList.size() > 0)) {
 	    TimerHandler h = (TimerHandler)timerList.elementAt(0);
@@ -554,18 +504,14 @@ doOneEvent(
 	    }
 	}
 
-	/*
-	 * Service a queued event, if there are any.
-	 */
+	// Service a queued event, if there are any.
 
 	if (serviceEvent(flags) != 0) {
 	    result = 1;	    
 	    break;
 	}
 
-	/*
-	 * There is no event on the queue. Check for idle events.
-	 */
+	// There is no event on the queue. Check for idle events.
 
 	if ((flags & TCL.IDLE_EVENTS) != 0) {
 	    if (serviceIdle() != 0) {
@@ -578,20 +524,18 @@ doOneEvent(
 	    break;
 	}
 
-	/*
-	 * We don't have any event to service. We'll wait if
-	 * TCL.DONT_WAIT. When the following wait() call returns,
-	 * one of the following things may happen:
-	 *
-	 * (1) waitTime milliseconds has elasped (if waitTime != 0);
-	 *
-	 * (2) The primary notifier has been notify()'ed by other threads:
-	 *     (a) an event is queued by queueEvent().
-	 *     (b) a timer handler was created by new TimerHandler();
-	 *     (c) an idle handler was created by new IdleHandler();
-	 * (3) We receive an InterruptedException.
-	 *
-	 */
+	// We don't have any event to service. We'll wait if
+	// TCL.DONT_WAIT. When the following wait() call returns,
+	// one of the following things may happen:
+	//
+	// (1) waitTime milliseconds has elasped (if waitTime != 0);
+	//
+	// (2) The primary notifier has been notify()'ed by other threads:
+	//     (a) an event is queued by queueEvent().
+	//     (b) a timer handler was created by new TimerHandler();
+	//     (c) an idle handler was created by new IdleHandler();
+	// (3) We receive an InterruptedException.
+	//
 
 	try {
 	    if (timerList.size() > 0) {
@@ -604,10 +548,8 @@ doOneEvent(
 		wait();
 	    }
 	} catch (InterruptedException e) {
-	    /*
-	     * We ignore any InterruptedException and loop continuously
-	     * until we receive an event.
-	     */
+	    // We ignore any InterruptedException and loop continuously
+	    // until we receive an event.
 	}
     }
 
@@ -638,21 +580,19 @@ serviceIdle()
     int gen = idleGeneration;
     idleGeneration++;
 
-    /*
-     * The code below is trickier than it may look, for the following
-     * reasons:
-     *
-     * 1. New handlers can get added to the list while the current
-     *    one is being processed.  If new ones get added, we don't
-     *    want to process them during this pass through the list (want
-     *    to check for other work to do first).  This is implemented
-     *    using the generation number in the handler:  new handlers
-     *    will have a different generation than any of the ones currently
-     *    on the list.
-     * 2. The handler can call doOneEvent, so we have to remove
-     *    the handler from the list before calling it. Otherwise an
-     *    infinite loop could result.
-     */
+    // The code below is trickier than it may look, for the following
+    // reasons:
+    //
+    // 1. New handlers can get added to the list while the current
+    //    one is being processed.  If new ones get added, we don't
+    //    want to process them during this pass through the list (want
+    //    to check for other work to do first).  This is implemented
+    //    using the generation number in the handler:  new handlers
+    //    will have a different generation than any of the ones currently
+    //    on the list.
+    // 2. The handler can call doOneEvent, so we have to remove
+    //    the handler from the list before calling it. Otherwise an
+    //    infinite loop could result.
 
     while (idleList.size() > 0) {
 	IdleHandler h = (IdleHandler)idleList.elementAt(0);
@@ -671,18 +611,15 @@ serviceIdle()
 } // end Notifier
 
 
-/*
- * This class is used to service timer events. When one or more timers
- * have expired but not processed, one TimerEvent will be generated
- * and put into the event queue. When the TimerEvent is pulled off the
- * queue, it will process all expired timers in a bunch.
- */
+
+// This class is used to service timer events. When one or more timers
+// have expired but not processed, one TimerEvent will be generated
+// and put into the event queue. When the TimerEvent is pulled off the
+// queue, it will process all expired timers in a bunch.
 
 class TimerEvent extends TclEvent {
 
-/*
- * The notifier what owns this TimerEvent.
- */
+// The notifier what owns this TimerEvent.
 
 Notifier notifier;
 
@@ -717,31 +654,28 @@ processEvent(
     int gen = notifier.timerGeneration;
     notifier.timerGeneration++;
 
-    /*
-     * The code below is trickier than it may look, for the following
-     * reasons:
-     *
-     * 1. New handlers can get added to the list while the current
-     *    one is being processed.  If new ones get added, we don't
-     *    want to process them during this pass through the list to
-     *    avoid starving other event sources. This is implemented
-     *    using the timer generation number: new handlers will have
-     *    a newer generation number than any of the ones currently on
-     *    the list.
-     * 2. The handler can call doOneEvent, so we have to remove
-     *    the handler from the list before calling it. Otherwise an
-     *    infinite loop could result.
-     * 3. Because we only fetch the current time before entering the loop,
-     *    the only way a new timer will even be considered runnable is if
-     *	  its expiration time is within the same millisecond as the
-     *	  current time.  This is fairly likely on Windows, since it has
-     *	  a course granularity clock. Since timers are placed
-     *	  on the queue in time order with the most recently created
-     *    handler appearing after earlier ones with the same expiration
-     *	  time, we don't have to worry about newer generation timers
-     *	  appearing before later ones.
-     */
-
+    // The code below is trickier than it may look, for the following
+    // reasons:
+    //
+    // 1. New handlers can get added to the list while the current
+    //    one is being processed.  If new ones get added, we don't
+    //    want to process them during this pass through the list to
+    //    avoid starving other event sources. This is implemented
+    //    using the timer generation number: new handlers will have
+    //    a newer generation number than any of the ones currently on
+    //    the list.
+    // 2. The handler can call doOneEvent, so we have to remove
+    //    the handler from the list before calling it. Otherwise an
+    //    infinite loop could result.
+    // 3. Because we only fetch the current time before entering the loop,
+    //    the only way a new timer will even be considered runnable is if
+    //	  its expiration time is within the same millisecond as the
+    //	  current time.  This is fairly likely on Windows, since it has
+    //	  a course granularity clock. Since timers are placed
+    //	  on the queue in time order with the most recently created
+    //    handler appearing after earlier ones with the same expiration
+    //	  time, we don't have to worry about newer generation timers
+    //	  appearing before later ones.
 
     while (notifier.timerList.size() > 0) {
 	TimerHandler h = (TimerHandler)notifier.timerList.elementAt(0);
@@ -760,6 +694,4 @@ processEvent(
 }
 
 } // end TimerEvent
-
-
 
